Leave Management System/force-app/main/default/objects/Leave_Balance__c/Leave_Balance__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>It stores the leave balances for the Users.</description>
    <label>Leave Balance</label>
</CustomObject>