Leave Management System/force-app/main/default/objects/Leave_Balance__c/fields/Earned_Casual_Leave__c.field-meta.xml
<CustomField>
    <fullName>Earned_Casual_Leave__c</fullName>
    <description>It stores how many yearly the casual leave should be.</description>
    <label>Earned/Casual Leave</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>