Leave Management System/force-app/main/default/objects/Leave_Balance__c/fields/Earned_Leave__c.field-meta.xml
<CustomField>
    <fullName>Earned_Leave__c</fullName>
    <description>It stores the earned leave balance</description>
    <label>Earned Leave</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>