Leave Management System/force-app/main/default/objects/Leave_Balance__c/fields/Sick_Leave__c.field-meta.xml
<CustomField>
    <fullName>Sick_Leave__c</fullName>
    <description>It stores the balance of sick leave of a year.</description>
    <label>Sick Leave</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>